--- a/templates/uaa/dashboard.html
+++ b/templates/uaa/dashboard.html
@@ -23,69 +23,241 @@
     <section class="content margtop">
       <div class="container-fluid">
 
-          <!-- Info boxes -->
-        <div class="row">
-          <div class="col-12 col-sm-6 col-md-3">
-            <div class="info-box">
-              <span class="info-box-icon bg-info elevation-1"><i class="fas fa-store"></i></span>
-
-              <div class="info-box-content">
-                <span class="info-box-text">total Assets</span>
-                <span class="info-box-number">
-                  10
-                  <small>.</small>
-                </span>
+      <!--Graphs-->
+    <div class="container">
+      <div class="row my-5">
+          <div class="col-md-6">
+              <div class="bg-white">
+                  <canvas id="myChart1" width="400" height="300"></canvas>
+                  <script>
+                      var ctx = document.getElementById('myChart1').getContext('2d');
+                      var myChart1 = new Chart(ctx, {
+                          type: 'polarArea',
+                          data: {
+                              labels: [{% for op in opf %} '{{op.vesselBooking.bookingDate|date:"Y-m-d"}}', {% endfor %}],
+                              datasets: [{
+                                  label: 'Products',
+                                  data: [{% for op in opf %} {{op.freightBookingNo}}, {% endfor %}],
+                                  backgroundColor: [
+                                      'rgba(255, 99, 132, 1)',
+                                      'rgba(54, 162, 235, 1)',
+                                      'rgba(255, 206, 86, 1)',
+                                      'rgba(75, 192, 192, 1)',
+                                      'rgba(153, 102, 255, 1)',
+                                      'rgba(255, 159, 64, 1)'
+                                  ],
+                                  borderColor: [
+                                      'rgba(255, 99, 132, 1)',
+                                      'rgba(54, 162, 235, 1)',
+                                      'rgba(255, 206, 86, 1)',
+                                      'rgba(75, 192, 192, 1)',
+                                      'rgba(153, 102, 255, 1)',
+                                      'rgba(255, 159, 64, 1)'
+                                  ],
+                                  borderWidth: 1
+                              }]
+                          },
+                          options: {
+                              scales: {
+                                  yAxes: [{
+                                      ticks: {
+                                          beginAtZero: true
+                                      }
+                                  }]
+                              }
+                          }
+                      });
+                  </script>
               </div>
-              <!-- /.info-box-content -->
-            </div>
-            <!-- /.info-box -->
           </div>
-          <!-- /.col -->
-          <div class="col-12 col-sm-6 col-md-3">
-            <div class="info-box mb-3">
-              <span class="info-box-icon bg-secondary elevation-1"><i class="fas fa-retweet"></i></span>
-
-              <div class="info-box-content">
-                <span class="info-box-text">Scheduled Maintenance</span>
-                <span class="info-box-number">410</span>
+          <div class="col-md-6">
+              <div class="bg-white">
+                  <canvas id="myChart" width="400" height="300"></canvas>
+                  <script>
+                      var ctx = document.getElementById('myChart').getContext('2d');
+                      var myChart = new Chart(ctx, {
+                          type: 'bar',
+                          data: {
+                              labels: [{% for op in opf %} '{{op.vesselBooking.bookingDate|date:"Y-m-d"}}', {% endfor %}],
+                              datasets: [{
+                                  label: 'Opened files',  
+                                  data: [{% for op in opf %} {{op.freightBookingNo}}, {% endfor %}],
+                                  backgroundColor: [
+                                      'rgba(255, 99, 60, 1)',
+                                      'rgba(54, 162, 235, 1)',
+                                      'rgba(255, 206, 86, 1)',
+                                      'rgba(75, 12, 192, 1)',
+                                      'rgba(153, 200, 255, 1)',
+                                      'rgba(255, 159, 64, 1)'
+                                  ],
+                                  borderColor: [
+                                      'rgba(255, 99, 45, 1)',
+                                      'rgba(54, 9, 235, 1)',
+                                      'rgba(255, 206, 86, 1)',
+                                      'rgba(75, 240, 192, 1)',
+                                      'rgba(153, 102, 200, 1)',
+                                      'rgba(255, 159, 64, 1)'
+                                  ],
+                                  borderWidth: 1
+                              }]
+                          },
+                          options: {
+                              scales: {
+                                  yAxes: [{
+                                      ticks: {
+                                          beginAtZero: true
+                                      }
+                                  }]
+                              }
+                          }
+                      });
+                  </script>
               </div>
-              <!-- /.info-box-content -->
-            </div>
-            <!-- /.info-box -->
           </div>
-          <!-- /.col -->
+      </div>
+  </div>
+  <!--End Graphs-->
 
-          <!-- fix for small devices only -->
-          <div class="clearfix hidden-md-up"></div>
-
-          <div class="col-12 col-sm-6 col-md-3">
-            <div class="info-box mb-3">
-              <span class="info-box-icon bg-warning elevation-1"><i class="fas fa-tasks"></i></span>
-
-              <div class="info-box-content">
-                <span class="info-box-text">Work or Task Requests</span>
-                <span class="info-box-number">60</span>
-              </div>
-              <!-- /.info-box-content -->
+  <!--Graphs-->
+  <div class="container">
+    <div class="row my-5">
+        <div class="col-md-6">
+            <div class="bg-white">
+                <canvas id="myChart11" width="400" height="300"></canvas>
+                <script>
+                    var ctx = document.getElementById('myChart11').getContext('2d');
+                    var myChart11 = new Chart(ctx, {
+                        type: 'line',
+                        data: {
+                            labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],
+                            datasets: [{
+                                label: 'Products',
+                                data: [12, 19, 3, 5, 2, 3],
+                                backgroundColor: [
+                                    'rgba(255, 99, 132, 1)',
+                                    'rgba(54, 162, 235, 1)',
+                                    'rgba(255, 206, 86, 1)',
+                                    'rgba(75, 192, 192, 1)',
+                                    'rgba(153, 102, 255, 1)',
+                                    'rgba(255, 159, 64, 1)'
+                                ],
+                                borderColor: [
+                                    'rgba(255, 99, 132, 1)',
+                                    'rgba(54, 162, 235, 1)',
+                                    'rgba(255, 206, 86, 1)',
+                                    'rgba(75, 192, 192, 1)',
+                                    'rgba(153, 102, 255, 1)',
+                                    'rgba(255, 159, 64, 1)'
+                                ],
+                                borderWidth: 1
+                            }]
+                        },
+                        options: {
+                            scales: {
+                                yAxes: [{
+                                    ticks: {
+                                        beginAtZero: true
+                                    }
+                                }]
+                            }
+                        }
+                    });
+                </script>
             </div>
-            <!-- /.info-box -->
-          </div>
-          <!-- /.col -->
-          <div class="col-12 col-sm-6 col-md-3">
-            <div class="info-box mb-3">
-              <span class="info-box-icon bg-success elevation-1"><i class="fas fa-users"></i></span>
-
-              <div class="info-box-content">
-                <span class="info-box-text">Total users</span>
-                <span class="info-box-number">2,000</span>
-              </div>
-              <!-- /.info-box-content -->
-            </div>
-            <!-- /.info-box -->
-          </div>
-          <!-- /.col -->
         </div>
-        <!-- /.row -->
+        <div class="col-md-6">
+            <div class="bg-white">
+                <canvas id="myChartt" width="400" height="300"></canvas>
+                <script>
+                    var ctx = document.getElementById('myChartt').getContext('2d');
+                    var myChartt = new Chart(ctx, {
+                        type: 'doughnut',
+                        data: {
+                            labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],
+                            datasets: [{
+                                label: 'Products',
+                                data: [12, 19, 3, 5, 2, 3],
+                                backgroundColor: [
+                                    'rgba(255, 99, 132, 1)',
+                                    'rgba(54, 162, 235, 1)',
+                                    'rgba(255, 206, 86, 1)',
+                                    'rgba(75, 192, 192, 1)',
+                                    'rgba(153, 102, 255, 1)',
+                                    'rgba(255, 159, 64, 1)'
+                                ],
+                                borderColor: [
+                                    'rgba(255, 99, 132, 1)',
+                                    'rgba(54, 162, 235, 1)',
+                                    'rgba(255, 206, 86, 1)',
+                                    'rgba(75, 192, 192, 1)',
+                                    'rgba(153, 102, 255, 1)',
+                                    'rgba(255, 159, 64, 1)'
+                                ],
+                                borderWidth: 1
+                            }]
+                        },
+                        options: {
+                            scales: {
+                                yAxes: [{
+                                    ticks: {
+                                        beginAtZero: true
+                                    }
+                                }]
+                            }
+                        }
+                    });
+                </script>
+            </div>
+        </div>
+
+        <div class="col-md-12">
+          <div class="bg-white">
+              <canvas id="myCharttt" width="400" height="300"></canvas>
+              <script>
+                  var ctx = document.getElementById('myCharttt').getContext('2d');
+                  var myCharttt = new Chart(ctx, {
+                      type: 'radar',
+                      data: {
+                          labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],
+                          datasets: [{
+                              label: 'Products',
+                              data: [12, 19, 3, 5, 2, 3],
+                              backgroundColor: [
+                                  'rgba(255, 99, 132, 1)',
+                                  'rgba(54, 162, 235, 1)',
+                                  'rgba(255, 206, 86, 1)',
+                                  'rgba(75, 192, 192, 1)',
+                                  'rgba(153, 102, 255, 1)',
+                                  'rgba(255, 159, 64, 1)'
+                              ],
+                              borderColor: [
+                                  'rgba(255, 99, 132, 1)',
+                                  'rgba(54, 162, 235, 1)',
+                                  'rgba(255, 206, 86, 1)',
+                                  'rgba(75, 192, 192, 1)',
+                                  'rgba(153, 102, 255, 1)',
+                                  'rgba(255, 159, 64, 1)'
+                              ],
+                              borderWidth: 1
+                          }]
+                      },
+                      options: {
+                          scales: {
+                              yAxes: [{
+                                  ticks: {
+                                      beginAtZero: true
+                                  }
+                              }]
+                          }
+                      }
+                  });
+              </script>
+          </div>
+      </div>
+
+    </div>
+</div>
+<!--End Graphs-->
 
       </div><!-- /.container-fluid -->
     </section>
