--- a/templates/reportdata/reportpage.html
+++ b/templates/reportdata/reportpage.html
@@ -13,7 +13,7 @@
       </div>
       <div class="col-sm-3">
         <ol class="breadcrumb float-sm-right">
-          <li class="breadcrumb-item"><a href="#">Home</a></li>
+          <li class="breadcrumb-item"><a href="{% url 'dashboard_url' %}">Home</a></li>
           <li class="breadcrumb-item active"><b>Manage reports</b></li>
         </ol>
       </div>
