--- a/templates/uaa/error500.html
+++ b/templates/uaa/error500.html
@@ -10,7 +10,7 @@
       </div> 
       <div class="col-sm-4">
         <ol class="breadcrumb float-sm-right">
-          <li class="breadcrumb-item"><a href="#">Home</a></li>
+          <li class="breadcrumb-item"><a href="{% url 'dashboard_url' %}">Home</a></li>
           <li class="breadcrumb-item active" style="color:red;"><b>Error</b></li>
         </ol>
       </div>
