--- a/templates/uaa/profile.html
+++ b/templates/uaa/profile.html
@@ -12,7 +12,7 @@
       </div>
       <div class="col-sm-6">
         <ol class="breadcrumb float-sm-right">
-          <li class="breadcrumb-item"><a href="#">Home</a></li>
+          <li class="breadcrumb-item"><a href="{% url 'dashboard_url' %}">Home</a></li>
           <li class="breadcrumb-item active"><b>User Profile</b></li>
         </ol>
       </div>
