--- a/templates/uaa/dashboard.html
+++ b/templates/uaa/dashboard.html
@@ -23,6 +23,10 @@
     <section class="content margtop">
       <div class="container-fluid">
 
+        <div>
+            {{ graph|safe }}
+        </div>
+        
       <!--Graphs-->
     <div class="container">
       <div class="row my-5">
