--- a/templates/base/main.html
+++ b/templates/base/main.html
@@ -68,10 +68,10 @@
 
     <!-- Right navbar links -->
     <ul class="navbar-nav ml-auto">
-      <!--profile link. -->
-      <li class="nav-item dropdown">
+       <!--profile link. -->
+       <li class="nav-item dropdown">
         <a class="nav-link" data-toggle="dropdown" href="#">
-          <i class="far fa-user"></i>
+          {% comment %} <i class="far fa-user"></i> {% endcomment %}
         </a>
         <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
             <a href="#" class="dropdown-item">
@@ -87,7 +87,7 @@
                 <i class="fas fa-star-half-alt mr-2" style="color:red;"></i>
               </span>
             </a>
-          </div>
+        </div>
       </li>
 
       <!-- Notifications Dropdown Menu -->
@@ -146,6 +146,15 @@
               <i class="nav-icon fas fa-user" style="color:white;"></i>
               <p style="color:white;">
                 Profile
+              </p>
+            </a>
+          </li>
+
+          <li class="nav-item">
+            <a href="{% url 'customer_url' %}" class="nav-link" id="hovCol">
+              <i class="nav-icon fas fa-tasks"></i>
+              <p>
+                My load status 
               </p>
             </a>
           </li>
@@ -365,6 +374,16 @@
   $(document).ready(function(){
     $('#tags').select2();
   });
+</script>
+
+<script>
+  function checkFileSize(){
+    var fileInput = document.getElementById('profile_picture');
+    if(fileInput.files[0].size > 1000000){
+      alert("profile picture size should be less or equal to 1MB");
+      fileInput.value = '';
+    }
+  }
 </script>
 
 </body>
